src/test/resources/de/monticore/umlcd4a/cocos/ebnf/valid/C4A08.cd
package de.monticore.umlcd4a.cocos.ebnf.invalid;

classdiagram C4A08 {
  interface I;
  class C1 extends C2;
  class C2 implements I;
}