src/test/resources/de/monticore/umlcd4a/cocos/ebnf/invalid/CD4AC0010.cd
package de.monticore.umlcd4a.cocos.ebnf.invalid;

classdiagram CD4AC0010 {
  interface I;
  enum E;
  class C;
  
  class C1 implements E;
  class C2 implements C;
  class C3 implements I;

  enum E1 implements E;
  enum E2 implements C;
  enum E3 implements I;
  
}